{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 12,
  "lineage": "d7497243-5f43-dec4-9b31-7c3fe187480d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-test-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04242e05c1ebface0",
            "arn": "arn:aws:ec2:ap-south-1:842470451496:instance/i-0ff23e31ebcc638ad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ff23e31ebcc638ad",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-014133ede9236f6cc",
            "private_dns": "ip-172-31-42-136.ap-south-1.compute.internal",
            "private_ip": "172.31.42.136",
            "public_dns": "ec2-13-233-107-73.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.107.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e200dc0f1266ea66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2190b249",
            "tags": {
              "Name": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-deb63bb0"
            ]
          },
          "depends_on": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "My_VPC_Security_ACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-04eb5e7cf7392fc3d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "842470451496",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-077a41a2a46ea5359"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-0b1d41e5d07114fcf"
          },
          "depends_on": [
            "aws_subnet.My_VPC_Subnet",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842470451496:security-group/sg-02ac3c83ffa49996c",
            "description": "My VPC Security Group",
            "egress": [],
            "id": "sg-02ac3c83ffa49996c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": null,
            "owner_id": "842470451496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d41e5d07114fcf"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842470451496:subnet/subnet-077a41a2a46ea5359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-077a41a2a46ea5359",
            "map_public_ip_on_launch": true,
            "owner_id": "842470451496",
            "tags": {
              "Name": "My VPC Subnet"
            },
            "vpc_id": "vpc-0b1d41e5d07114fcf"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842470451496:vpc/vpc-0b1d41e5d07114fcf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be6e9ea3d9199bb2",
            "default_route_table_id": "rtb-06b0d97bbada2f4b3",
            "default_security_group_id": "sg-0e867870c5d2a7287",
            "dhcp_options_id": "dopt-d0fc1fbb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1d41e5d07114fcf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06b0d97bbada2f4b3",
            "owner_id": "842470451496",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}